<resources>
    <string name="app_name">Visitor Management App</string>
    <string name="title_activity_landing2">landing2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Visitor Manager</string>
    <string name="nav_header_subtitle">info@visitormanager.co.ug</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_register">Register</string>
    <string name="menu_records">Records</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_settings">Settings</string>
</resources>